--- a/components/layout/navbar/navbar.module.scss
+++ b/components/layout/navbar/navbar.module.scss
@@ -1,11 +1,7 @@
 @use "sass:math";
-@import "../../../styles/settings/_mixins.scss";
-@import "../../../styles/settings/_colors.scss";
-@import "../../../styles/settings/_variables.scss";
-
-.scrolled {
-  box-shadow: 0 0 0.5rem 0 #0000005b !important;
-}
+@import "../../../styles/settings/mixins";
+@import "../../../styles/settings/colors";
+@import "../../../styles/settings/variables";
 
 .navbar {
   transition: box-shadow 0.2s;
@@ -18,6 +14,17 @@
   position: fixed;
   top: 0;
   background: white;
+  &.scrolled {
+    box-shadow: 0 0 0.5rem 0 #0000005b;
+  }
+
+  &.transparent {
+    background: transparent;
+    box-shadow: unset;
+    nav {
+      background: transparent;
+    }
+  }
 
   @include desktop() {
     padding-top: 0;
