--- a/styles/marketo.scss
+++ b/styles/marketo.scss
@@ -70,8 +70,8 @@
     font-weight: 400;
     margin-top: 1.5rem;
     color: $color-white;
-    border-color: $color-skyblue !important;
-    background-color: $color-skyblue !important;
+    border-color: $color-skyblue;
+    background-color: $color-skyblue;
     cursor: pointer;
   }
 
