--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -11,11 +11,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-    img {
-      object-fit: fill;
-      object-position: 50%;
-      height: unset;
-      width: unset;
+    & > div {
+      &:only-child {
+        display: block !important;
+        img {
+          object-fit: fill;
+          height: unset;
+          width: unset;
+        }
+      }
     }
   }
   .content {
@@ -45,11 +49,6 @@
           color: $color-black;
           max-width: 516px;
           text-align: left;
-          .rating {
-            img {
-              margin: 0 0.25rem;
-            }
-          }
           .quote {
             font-weight: 400;
             font-size: 1.25rem;
@@ -101,11 +100,6 @@
           color: $color-black;
           max-width: 516px;
           text-align: left;
-          .rating {
-            img {
-              margin: 0 0.25rem;
-            }
-          }
           .quote {
             padding: 0.75rem 0 2rem 0;
           }
