--- a/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
+++ b/components/agility-pageModules/pressReleaseContent/pressReleaseContent.module.scss
@@ -42,7 +42,7 @@
       text-align: center;
       color: $color-white;
       * {
-        font-weight: 400 !important;
+        font-weight: 400;
         font-size: 2rem;
       }
     }
@@ -59,7 +59,7 @@
         text-align: center;
         color: $color-white;
         * {
-          font-weight: 400 !important;
+          font-weight: 400;
           font-size: 2.5rem;
         }
       }
