--- a/components/agility-pageModules/textWithForm/textWithForm.module.scss
+++ b/components/agility-pageModules/textWithForm/textWithForm.module.scss
@@ -2,6 +2,7 @@
 @import "../../../styles/settings/colors";
 
 .textWithForm {
+  // default layout
   .content {
     display: flex;
     flex-direction: column;
@@ -54,10 +55,92 @@
       }
     }
   }
+  // column layout
+  .columnLayoutContent {
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    & > * {
+      flex-basis: 100%;
+    }
+    .textContent {
+      padding: 0 1rem;
+      .testimonial {
+        .testimonialRating {
+          display: flex;
+          margin: 1.5rem 0 1rem 0;
+          img {
+            margin: 0 0.25rem;
+          }
+        }
+        p {
+          font-size: 1rem;
+          white-space: pre-line;
+        }
+        small {
+          font-size: 0.85rem;
+        }
+      }
+      .awardImages {
+        margin-top: 1.5rem;
+        .awardImage {
+          padding: unset;
+          margin: 0 0.25rem;
+          max-width: 90px;
+          img {
+            margin: unset;
+          }
+        }
+      }
+    }
+    // !important is used here to override some form styles because this is layout has unique styles for it.
+    .form {
+      margin-top: 1rem;
+      & > * {
+        margin: 0 auto;
+        display: grid;
+        width: 100%;
+        grid-template-columns: repeat(2, 1fr);
+        & > div {
+          max-width: unset !important;
+          padding: 0 0.5rem !important;
+          width: 100%;
+          &:last-of-type {
+            position: relative;
+            min-height: 100px;
+            span {
+              position: absolute;
+              left: 0;
+              width: 100%;
+              transform: translateX(50%);
+              button {
+                background-color: $color-orange !important;
+                border: unset;
+                font-weight: 600 !important;
+              }
+            }
+          }
+        }
+        input,
+        select {
+          background-color: $color-white !important;
+          padding: 0.75rem 1rem;
+          margin: 0.25rem 0;
+          box-sizing: border-box;
+          border: 0.1rem solid $color-black !important;
+        }
+      }
+    }
+  }
   @include desktop() {
     .content {
       padding-top: 3rem;
       flex-direction: row;
+      .form {
+        margin-top: unset;
+      }
+    }
+    .columnLayoutContent {
       .form {
         margin-top: unset;
       }
