--- a/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
+++ b/components/agility-pageModules/textGridWithMedia/textGridWithMedia.module.scss
@@ -34,7 +34,7 @@
     margin: 0 0.25rem;
     min-width: 225px;
     .textItemMedia {
-      min-width: 120px;
+      max-width: 120px;
       min-height: 120px;
       &.textItemMediaSmall {
         max-width: 90px;
