add special bondFirstFold, add googleCloudAnimation, changes to various page modules

--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -4,6 +4,7 @@
 
 // default firstFold styling
 .firstFold {
+  position: relative;
   // styling configuration for the optionally toggled no image layout field
   .noImageLayout {
     padding: 2.5rem 0;
