--- a/styles/settings/_colors.scss
+++ b/styles/settings/_colors.scss
@@ -165,3 +165,6 @@ $color-mediumpurple: #6e0bdc;
 .text-mediumblue {
   color: $color-mediumblue;
 }
+.text-darkblue {
+  color: $color-darkblue;
+}
