--- a/styles/typography.scss
+++ b/styles/typography.scss
@@ -231,3 +231,27 @@ table {
     }
   }
 }
+/*
+  <<<<<<<<<<<<<<<<TYPOGRAPHY HELPER CLASSES>>>>>>>>>>>>>>>>>
+*/
+.is-size-05 {
+  font-size: $size-05;
+}
+.is-size-1 {
+  font-size: $size-1;
+}
+.is-size-2 {
+  font-size: $size-2;
+}
+.is-size-3 {
+  font-size: $size-3;
+}
+.is-size-4 {
+  font-size: $size-4;
+}
+.is-size-5 {
+  font-size: $size-5;
+}
+.is-size-6 {
+  font-size: $size-6;
+}
