--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -32,8 +32,12 @@
   .image {
     display: flex;
     justify-content: center;
-    & > div {
-      height: 100%;
+    align-items: flex-end;
+    div {
+      width: 100%;
+      img {
+        object-fit: contain;
+      }
     }
   }
 
@@ -57,7 +61,7 @@
     }
     .primaryLink,
     .secondaryLink {
-      margin-top: unset;
+      margin: unset;
     }
   }
 }
@@ -176,6 +180,64 @@
     .primaryLink {
       margin-top: 2rem;
       margin-right: 1rem;
+    }
+  }
+}
+
+.testimonial {
+  @include shadow();
+  position: relative;
+  border-radius: 1rem;
+  margin: 1rem 0;
+  padding: 1rem;
+  max-width: 32ch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @include desktop() {
+    padding: 2rem;
+  }
+  &.testimonialComment {
+    .testimonialIcon {
+      position: absolute;
+      padding: 1rem;
+      max-width: 80px;
+      max-height: 80px;
+      background-color: $color-darkblue;
+      border-radius: 50%;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  p {
+    margin: 1rem 0 2rem 0;
+    font-style: italic;
+    font-size: 1.2rem;
+  }
+  .testimonialDetails {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    p {
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+    .testimonialImage {
+      padding: 1rem;
+      max-width: 125px;
+      max-height: 125px;
+      overflow: hidden;
+      & > div {
+        &:only-child {
+          border-radius: 50%;
+        }
+      }
     }
   }
 }
