--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -79,7 +79,69 @@
       }
     }
     @include touch() {
-      margin: unset;
+      margin: unset !important;
+      & > * {
+        margin-left: auto;
+        margin-right: auto;
+      }
+    }
+  }
+}
+
+.testimonial {
+  @include shadow();
+  position: relative;
+  border-radius: 1rem;
+  margin: 3rem 0;
+  padding: 3rem 1rem;
+  max-width: 32ch;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  @include desktop() {
+    padding: 3.5rem 1.5rem;
+  }
+  &.testimonialComment {
+    .testimonialIcon {
+      position: absolute;
+      padding: 1rem;
+      max-width: 80px;
+      max-height: 80px;
+      background-color: $color-darkblue;
+      border-radius: 50%;
+      top: 0;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      svg {
+        width: 100%;
+        height: 100%;
+      }
+    }
+  }
+  p {
+    margin: 1rem 0 2rem 0;
+    font-style: italic;
+    font-size: 1.2rem;
+  }
+  .testimonialDetails {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-items: center;
+    p {
+      margin: 0.5rem 0;
+      font-size: 1rem;
+    }
+    .testimonialImage {
+      padding: 1rem;
+      max-width: 125px;
+      max-height: 125px;
+      overflow: hidden;
+      & > div {
+        &:only-child {
+          border-radius: 50%;
+        }
+      }
     }
   }
 }
