--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -85,32 +85,33 @@
   }
 }
 
+// !important needs to be used to make sure that the helper class applies.
 .flex-direction-column-reverse {
-  flex-direction: column-reverse;
+  flex-direction: column-reverse !important;
 }
 
 .justify-content-center {
-  justify-content: center;
+  justify-content: center !important;
 }
 
 .justify-content-flex-start {
-  justify-content: flex-start;
+  justify-content: flex-start !important;
 }
 
 .justify-content-flex-end {
-  justify-content: flex-end;
+  justify-content: flex-end !important;
 }
 
 .align-items-flex-start {
-  align-items: flex-start;
+  align-items: flex-start !important;
 }
 
 .align-items-flex-end {
-  align-items: flex-end;
+  align-items: flex-end !important;
 }
 
 .align-items-center {
-  align-items: center;
+  align-items: center !important;
 }
 
 /*
