--- a/components/agility-pageModules/blogPageContent/blogCard.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogCard.module.scss
@@ -2,10 +2,11 @@
 @import "../../../styles/settings/mixins";
 
 .blogCard {
-  height: 25vh;
-  min-height: 320px;
+  height: 22.5vh;
+  min-height: 300px;
   border-radius: 1rem;
-  @include shadow();
+  box-shadow: 0 0 0.5rem 0.25rem rgb(0 0 0 / 12%);
+  background-color: $color-white;
   display: flex;
   flex-direction: column;
   justify-content: flex-end;
@@ -61,20 +62,38 @@
     }
 
     .title {
-      font-size: 1.15rem;
-      padding: 0 1.5rem;
+      font-size: 1.125rem;
+      line-height: 1.2;
+      padding: 1rem 1.5rem 0 1.5rem;
       overflow: hidden;
       display: -webkit-box;
-      -webkit-line-clamp: 2;
+      -webkit-line-clamp: 4;
       -webkit-box-orient: vertical;
       width: 100%;
     }
 
     .link {
-      padding: 0.5rem 1.5rem 1rem 1.5rem;
+      padding: 0 1.5rem 0.75rem 1.5rem;
       display: block;
       font-weight: 600;
       font-size: 1rem;
+      span {
+        position: relative;
+        display: flex;
+        align-items: center;
+        font-weight: 600;
+        &::after {
+          content: "";
+          display: block;
+          padding: 0.1rem;
+          border-right: solid;
+          border-top: solid;
+          margin-left: 0.2rem;
+          border-width: 0.2rem;
+          border-color: $color-navy;
+          transform: rotate(45deg);
+        }
+      }
     }
   }
 }
