--- a/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
+++ b/components/agility-pageModules/blogPageContent/blogPageContent.module.scss
@@ -3,6 +3,7 @@
 
 .highlightedPost {
   position: relative;
+  margin-bottom: 1rem;
   .highlightedPostBackgroundImage {
     & > * {
       display: block !important;
@@ -114,6 +115,11 @@
       display: flex;
       justify-content: center;
       align-items: center;
+      & > div {
+        &:only-child {
+          gap: 2rem;
+        }
+      }
     }
     .pagination {
       grid-area: pages;
